--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,24 @@
 
 Flask==1.1.2
-ipykernel @ file:///C:/ci/ipykernel_1596208728219/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1598883894321/work
-ipython-genutils==0.2.0
-isort @ file:///tmp/build/80754af9/isort_1602603989581/work
-itsdangerous==1.1.0
-jedi @ file:///C:/ci/jedi_1592833832328/work
-Jinja2==2.11.2
-joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
-jsonschema @ file:///C:/ci/jsonschema_1594363671836/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
-jupyter-core==4.6.3
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
 Keras==2.3.1
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
 Keras-Preprocessing==1.1.0
-keyring @ file:///C:/ci/keyring_1601488971022/work
 kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
-Markdown @ file:///C:/ci/markdown_1602068870297/work
-MarkupSafe @ file:///C:/ci/markupsafe_1594405949945/work
 matplotlib==3.3.2
 nb-conda==2.2.1
-nb-conda-kernels @ file:///C:/ci/nb_conda_kernels_1600427315623/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1601059699549/work
-nbconvert @ file:///C:/ci/nbconvert_1601914921407/work
 nbformat==5.0.7
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1601499549014/work
-notebook @ file:///C:/ci/notebook_1601494955742/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1596233945180/work
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1594166760263/work
+numpy==1.19.1
 oauthlib==3.1.0
 opt-einsum==3.1.0
 packaging==20.4
 python-dateutil==2.8.1
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server @ file:///tmp/build/80754af9/python-language-server_1600454544709/work
 pytz==2020.1
 pywin32==227
-pywin32-ctypes @ file:///C:/ci/pywin32-ctypes_1594392691209/work
 pywinpty==0.5.7
 PyYAML==5.3.1
 pyzmq==19.0.2
 QDarkStyle==2.8.1
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
 QtPy==1.9.0
-scikit-learn @ file:///C:/ci/scikit-learn_1598376983131/work
-scipy @ file:///C:/ci/scipy_1597686737426/work
 Send2Trash==1.5.0
 six==1.15.0
 tensorboard==2.2.1
